--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="container">
     <form id="form">
-      <input type="text" name="Имя" id="user-name">
-      <input type="text" name="Номер телефона" id="user-phone">
-      <input type="text" name="Адрес доставки" id="user-delivery">
-      <input type="text" name="Товар" id="user-product">
+      <input type="text" placeholder="Имя" id="user-name">
+      <input type="text" placeholder="Номер телефона" id="user-phone">
+      <input type="text" placeholder="Адрес доставки" id="user-delivery">
+      <input type="text" placeholder="Товар" id="user-product">
       <button id="order">Оформить</button>
     </form>
   </div>
