--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           
         let data = {
           name: name,
-          tg: tg_user,
+          tg_user: tg_user,
           phone: phone,
           delivery: delivery,
           product: product
