--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="container">
     <form id="form">
       <input type="text" placeholder="Имя" id="user-name">
-        <input type="text" placeholder="Tg имя, начинается с @" id="tg-user-name">
+        <input type="text" placeholder="Telegram имя (начинается с @)" id="tg-user-name">
       <input type="text" placeholder="Номер телефона" id="user-phone">
-      <input type="text" placeholder="Адрес доставки" id="user-delivery">
-      <input type="text" placeholder="Товар" id="user-product">
+      <input type="text" placeholder="Адрес доставки (под, эт, кв)" id="user-delivery">
+      <input type="text" placeholder="Наименование товара" id="user-product">
       <div id="error"></div>
       <button type="button" id="order">Оформить</button>
     </form>
